fixed footer icon spacing

--- a/css/style.css
+++ b/css/style.css
@@ -25,15 +25,15 @@ nav a {
 	align-items: center;
 }
 .footer-icon {
-	display: inline-block; 
-	padding-left:0px;
+	display: inline-block;
+	padding-left:10px;
 	padding-top:10px;
 	padding-right:10px;
 	padding-bottom:10px;"
 }
 .hover:hover{
   cursor:pointer;
-  
+
   border-color: black;
 }
 .footer-section {
@@ -78,7 +78,7 @@ h5 {
 .name-logo {
   font: 400 3.5em/125% 'Sacramento', Helvetica, Sans-serif;
 	color: #333;
-  text-shadow: 4px 4px 3px rgba(0,0,0,0.1); 
+  text-shadow: 4px 4px 3px rgba(0,0,0,0.1);
 }
 @keyframes blink {
     0% {
@@ -142,7 +142,7 @@ h5 {
   letter-spacing: 0.4em;
   color: #1d6152;
   background-color: #fff;
-  
+
   margin-top: -0.7em;
   padding: 0.65em 0 0.65em 0.7em;
 }
@@ -152,11 +152,3 @@ h5 {
 .bottom-heading {
 	padding-bottom: 50px;
 }
-
-
-
-
-
-
-
-
